--- a/The-Shrek-project/App test/src/Resources/css/TarjetaComida.css
+++ b/The-Shrek-project/App test/src/Resources/css/TarjetaComida.css
@@ -1,13 +1,11 @@
 .card-container {
-    display: flex;
-    flex-direction: column;
     border-radius: 1rem;
     margin: 0.5rem;
     background-color: white;
-    width: 30%;
+    width: 100%;
     box-shadow: 0px 10px 8px #999;
     height: fit-content;
-}
+  }
 
 .card-img {
     width: 100%;
@@ -26,4 +24,12 @@
     padding: 0.5rem 1rem;
     background-color: #d3d096;
     text-decoration: none;
+}
+.comida {
+    align-content: flex-start;
+    width: 100%;
+    left: 10px;
+    display: flex;
+    overflow: auto;
+    flex-wrap: wrap;
 }
