--- a/The-Shrek-project/App test/src/Resources/css/Cabecera.css
+++ b/The-Shrek-project/App test/src/Resources/css/Cabecera.css
@@ -45,6 +45,11 @@
     justify-content: space-between;
     width: 100%;
 }
+#menus div nav{
+        display: flex;
+        justify-content: space-between;
+    width: 100%;
+}
 
 
 
